[package]
authors = ["David LeGare <excaliburhissheath@gmail.com>"]
name = "rocket_derive"
version = "0.3.0"

[lib]
proc-macro = true

[features]
default = ["json"]
json = []
msgpack = []

[dependencies]
quote = "0.3.15"
syn = "0.11.11"

[dev-dependencies]
rmp-serde = "0.13.6"
rocket = "0.3.2"
rocket_contrib = "0.3.2"
rocket_codegen = "0.3.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
