[package]
name = "courier"
version = "0.3.1"
authors = ["David LeGare <excaliburhissheath@gmail.com>"]
description = "Utility to make it easier to send and receive data when using the Rocket framework."
documentation = "https://docs.rs/courier"
repository = "https://github.com/excaliburHisSheath/courier"
readme = "./README.md"
keywords = ["rocket"]
license = "MIT/Apache-2.0"
categories = ["development-tools", "web-programming"]

[lib]
proc-macro = true

[features]
default = ["json"]
json = []
msgpack = []

[dependencies]
quote = "0.3.15"
syn = "0.11.11"

[dev-dependencies]
rmp-serde = "0.13.6"
rocket = "0.3.2"
rocket_contrib = "0.3.2"
rocket_codegen = "0.3.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
